--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content text-center">
             <h1>Hi, I'm Michael Vadakkan!</h1>
 
-            <p class="lead">Marketing Consultant</p>
+            <p class="lead">Finance Professional</p>
             <ul class="social-icon">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
