--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 
             <p class="lead">Finance Professional</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/michael.vadakkan"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/michaelvadakkan/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="profile-img"></div>
